--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>WebservicesJS</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="webservicesjs/css/webservices.css" type="text/css" />
     <link rel="stylesheet" href="prettify/prettify.css" type="text/css" />
     <script type="text/javascript" src="prettify/prettify.js"></script>
@@ -70,8 +70,8 @@ $(myforms).webservices(options);</pre>
     <h4>Démo</h4>
 
     <script type="text/javascript" src="jquery/js/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
-    <script type="text/javascript" src="webservicesjs/js/webservices.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="webservicesjs/js/webservices.min.js"></script>
     <script type="text/javascript" src="forms.js"></script>
 </body>
 </html>
