correct duration request

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="row-fluid left0">
         <a name="doc"></a><h4>Documentation</h4>
         <div class="span6 left15">
-            <p></p>
+            <p>Project on GitHub : <a target="_blank" href="https://github.com/funkymed/webservicesjs">https://github.com/funkymed/webservicesjs</a></p>
             <pre class="prettyprint linenums">
 var myforms = [
     {
