--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $(myforms).webservices(options);</pre>
 
     <script type="text/javascript" src="jquery/js/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="webservicesjs/js/webservices.js"></script>
+    <script type="text/javascript" src="webservicesjs/js/webservices.min.js"></script>
     <script type="text/javascript" src="forms.js"></script>
 </body>
 </html>
