--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="row-fluid">
         <a name="author"></a>
         <h4>Author</h4>
-        <div class="span6 left15">
+        <div class="span6 left0">
             <p>
                 Cyril Pereira<br />
                 <a target="_blank" href="http://www.cyrilpereira.com">http://www.cyrilpereira.com</a>
@@ -48,7 +48,7 @@
 
     <div class="row-fluid left0">
         <a name="doc"></a><h4>Documentation</h4>
-        <div class="span6 left15">
+        <div class="span6 left0">
             <p>Project on GitHub : <a target="_blank" href="https://github.com/funkymed/webservicesjs">https://github.com/funkymed/webservicesjs</a></p>
             <p>You'll need to have jQuery (http://jquery.com) and Bootstrap (http://twitter.github.com/bootstrap).</p>
 
@@ -89,7 +89,7 @@ $(myforms).webservices(options);</pre>
 
     <script type="text/javascript" src="jquery/js/jquery-1.8.2.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="webservicesjs/js/webservices.min.js"></script>
+    <script type="text/javascript" src="webservicesjs/js/webservices.js"></script>
     <script type="text/javascript" src="forms.js"></script>
 </body>
 </html>
