--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 var myforms = [
     {
         action:'http://www.urlwebservices.com/yourwebservices.php',
+        method:'GET',
         title:'test',
         inputs:[
             {label:'field1',name:'name1',defaultvalue:'value1',type:'text'}
