move files in vendor

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
     <title>WebservicesJS</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="webservicesjs/css/webservices.css" type="text/css" />
-    <link rel="stylesheet" href="prettify/prettify.css" type="text/css" />
-    <script type="text/javascript" src="prettify/prettify.js"></script>
+    <link rel="stylesheet" href="vendor/prettify/prettify.css" type="text/css" />
+    <script type="text/javascript" src="vendor/prettify/prettify.js"></script>
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-944839-15']);
@@ -88,8 +88,8 @@ $(myforms).webservices(options);</pre>
     <a name="demo"></a>
     <h4>Démo</h4>
 
-    <script type="text/javascript" src="jquery/js/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="vendor/jquery/js/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="webservicesjs/js/webservices.min.js"></script>
     <script type="text/javascript" src="forms.js"></script>
 </body>
