remove all vendors

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <title>WebservicesJS</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.css" type="text/css" />
     <link rel="stylesheet" href="webservicesjs/css/webservices.css" type="text/css" />
-    <link rel="stylesheet" href="vendor/prettify/prettify.css" type="text/css" />
-    <script type="text/javascript" src="vendor/prettify/prettify.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -83,10 +83,12 @@ $(myforms).webservices(options);</pre>
     <a name="demo"></a>
     <h4>Démo</h4>
 
-    <script type="text/javascript" src="vendor/jquery/js/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>
     <script type="text/javascript" src="webservicesjs/js/webservices.min.js"></script>
+
     <script type="text/javascript" src="forms.js"></script>
+    <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -98,5 +100,6 @@ $(myforms).webservices(options);</pre>
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+
 </body>
 </html>
