load faster bootstrap

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>WebservicesJS</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" type="text/css" />
-    <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.css" type="text/css" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="//twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.css" type="text/css" />
     <link rel="stylesheet" href="webservicesjs/css/webservices.css" type="text/css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -83,12 +83,12 @@ $(myforms).webservices(options);</pre>
     <a name="demo"></a>
     <h4>Démo</h4>
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/bootstrap.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="webservicesjs/js/webservices.min.js"></script>
 
     <script type="text/javascript" src="forms.js"></script>
-    <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
+    <script type="text/javascript" src="//twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
 
     <script type="text/javascript">
       var _gaq = _gaq || [];
